--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -457,6 +457,11 @@ service btsnoop /system/bin/btsnoop
    disabled
    oneshot
 
+service fingerprintd /system/bin/fingerprintd
+    class late_start
+    user system
+    group input 
+
 service ftmd /system/bin/logwrapper /system/bin/ftmdaemon
     class late_start
     user root
@@ -480,6 +485,11 @@ service sensors /system/vendor/bin/sensors.qcom
     class late_start
     user root
     group root
+
+service vcsFPService /system/bin/vcsFPService
+    class late_start
+    user system
+    group system 
 
 # Adjust socket buffer to enlarge TCP receive window for high bandwidth
 # but only if ro.data.large_tcp_window_size property is set.
