--- a/rootdir/etc/init.pantech.usb.rc
+++ b/rootdir/etc/init.pantech.usb.rc
@@ -42,6 +42,13 @@ on fs
     mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
     write /sys/class/android_usb/android0/f_ffs/aliases adb
 
+    mkdir /dev/usb-ffs 0770 shell shell
+    mkdir /dev/usb-ffs/adb 0770 shell shell
+    mount functionfs adb /dev/usb-ffs/adb uid=2000,gid=2000
+    write /sys/class/android_usb/android0/f_ffs/aliases adb
+    mkdir /dev/bus 0755 root root
+    mkdir /dev/bus/usb 0755 root root
+
 on usb-charging-mode
 	write /sys/class/android_usb/android0/enable 0
 	write /sys/class/android_usb/android0/f_diag/clients diag
