--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -326,7 +326,7 @@ service adsprpcd /vendor/bin/adsprpcd
    group media
 
 service wcnss-service /vendor/bin/wcnss_service
-    class late_start
+    class main
     user system
     group system wifi oem_2950 diag radio
     oneshot
