--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -141,6 +141,11 @@ on boot
     chmod 0660 /sys/class/leds/gpled_1/brightness
     chmod 0660 /sys/class/leds/gpled_2/brightness
     chmod 0660 /sys/class/leds/gpled_3/brightness
+
+    chmod 0660 /sys/class/leds/kpdbl_menu/brightness
+    chown system radio /sys/class/leds/kpdbl_menu/brightness	
+    chmod 0660 /sys/class/leds/kpdbl_back/brightness
+    chown system radio /sys/class/leds/kpdbl_back/brightness
     
     chown system radio /sys/class/leds/led:rgb_red/brightness
     chown system radio /sys/class/leds/led:rgb_green/brightness
