--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -150,6 +150,12 @@ on boot
     chown system radio /sys/class/leds/gpled_2/brightness
     chown system radio /sys/class/leds/gpled_3/brightness
 
+    chmod 0660 /sys/class/leds/kpdbl_menu/brightness
+    chmod 0660 /sys/class/leds/kpdbl_back/brightness
+
+    chown system radio /sys/class/leds/kpdbl_menu/brightness
+    chown system radio /sys/class/leds/kpdbl_back/brightness
+
     chown system radio /sys/class/leds/led:rgb_red/brightness
     chown system radio /sys/class/leds/led:rgb_red/blink
     chown system radio /sys/class/leds/led:rgb_red/pan_blink
