msm8974: kill mpdecision and replace it with bricked hotplug

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -149,10 +149,4 @@ on property:dev.bootcomplete=1
     # Start perfd
     rm /data/system/perfd/default_values
     setprop vendor.post_boot.parsed 1
-    start mpdecision
-
-service mpdecision /vendor/bin/mpdecision --avg_comp
-    class main
-    user root
-    group root readproc
-    disabled
+    write /sys/kernel/msm_mpdecision/conf/enabled 1
